# ApplicationTemplate

./: .clang-format  .gitmodules  CMakeLists.txt  generate_texture_map.py
ext/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
res/: CMakeLists.txt
res/Shaders/: default.frag  default.vert  spacetime.frag
res/Textures/: ATTRIBUTION.md
src/app/: Application.cpp  CMakeLists.txt  pch.hpp
src/app/Core/: Window.cppm
src/app/Structures/: Array.cppm  SizedArray.cppm  Structures.cppm  Tether.cppm  UnmanagedArray.cppm
src/app/World/: Board.cppm
src/lwvl/: CMakeLists.txt
src/lwvl/include/lwvl/: lwvl.hpp
src/lwvl/src/: Buffer.cpp  Common.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  stb_image.cpp
